# binance-notificator

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  settings.py  setup.py
src/: logger.py  utils.py
src/binance_api/: account.py
src/notificators/: models.py  schemas.py  telegram.py
